tests/integration_tests/snapshots/integration__integration_tests__config_state__state_get_with_ci_entries.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
[36mDEFAULT BRANCH[39m
[107m [0m  main

[36mPREVIOUS BRANCH[39m
[107m [0m  (none)

[36mBRANCH MARKERS[39m
[107m [0m  (none)

[36mCI STATUS CACHE[39m
 Branch  Status Age   Head   
 ─────── ────── ─── ──────── 
 bugfix  failed now 11122233 
 feature passed now abc12345 
 main    none   now deadbeef

[36mLOG FILES[39m  @ .git/wt-logs
[107m [0m  (none)
