tests/integration_tests/snapshots/integration__integration_tests__config_state__state_show_with_ci_entries.snap
---
source: tests/integration_tests/config_state.rs
expression: "String::from_utf8_lossy(&output.stderr)"
---
⚪ Default branch:
[107m [0m  main

⚪ CI status cache:
Branch   Status  Age  Head    
───────  ──────  ───  ────────
feature  passed  0s   abc12345
bugfix   failed  0s   11122233
main     none    0s   deadbeef
